--- a/HW_Info.Rmd
+++ b/HW_Info.Rmd
@@ -25,6 +25,8 @@ This is where I will post homework solutions (full and partial), and some helper
 * Multiple Linear regression [MLR_solutions](notes/solutions/MLR_solutions.html)
 * Plotting help for spline predictions [Lec04_solutions](notes/solutions/Lec04_solutions.html)
 * My model building [VariableSelection_solutions](notes/solutions/VariableSelection_solutions.html)
+* M & M Experiment [MnM_Experiment_S16_Solutions](notes/solutions/MnM_Experiment_S16_Solutions.html)
+* Logistic Regression [LogReg_Solutions](notes/solutions/LogReg_Solutions.html)
 
 
 
