--- a/notes/lec11_MissingData.Rmd
+++ b/notes/lec11_MissingData.Rmd
@@ -24,6 +24,11 @@ source("C:/Github/MATH456/stylesheets/custom.R")
 
 # Reading & References
 
+#### Required Reading
+* Afifi: Section 9.2 
+* mice: Multivariate Imputation by Chained Equations in R (skim) https://www.jstatsoft.org/article/view/v045i03 
+
+#### Additional References
 * Little, R. and Rubin, D. Statistical Analysis with Missing Data, 2nd Ed., Wiley, 2002
     - Standard reference
     - Requires some math
@@ -31,9 +36,6 @@ source("C:/Github/MATH456/stylesheets/custom.R")
     - Small and cheap
     - Requires very little math
 * Multiple Imputation.com http://www.stefvanbuuren.nl/mi/
-* A. Afifi, et al. “Methods for improving Regression Analysis for Skewed Continuous or Counted Responses” 
-  Annual Review of Public Health, 2007, 28:95–111
-  http://arjournals.annualreviews.org/doi/pdf/10.1146/annurev.publhealth.28.082206.094100
 * http://www.analyticsvidhya.com/blog/2016/03/tutorial-powerful-packages-imputing-missing-values/ 
 * http://www.r-bloggers.com/imputing-missing-data-with-r-mice-package/
 
@@ -563,15 +565,15 @@ At iteration $(\ell)$:
 * _rf_: Random forest imputations (any)
 
 
-## Example: Prescribed amount of missing. 
-We will demonstrate using the Iris data set after we make a certain % of the 
+#### Example: Prescribed amount of missing.
+We will demonstrate using Fisher's Iris data (pre-built in with R) 
+where we can artifically create a prespecified percent of the 
 data missing. This allows us to be able to  estimate the bias incurred by 
 using these imputation methods.
 
 For the `iris` data we set a seed and use the `prodNA()` function from the 
 `missForest` package to create 10% missing values in this data set. 
 ```{r}
-iris <- iris
 prop.table(table(is.na(iris)))
 set.seed(12345) # Note to self: Change the combo on my luggage
 iris.mis <- prodNA(iris, noNA=0.1)
@@ -580,7 +582,7 @@ prop.table(table(is.na(iris.mis)))
 
 #### Multiply impute the missing data using `mice()`
 ```{r}
-imp_iris <- mice(iris.mis, m=5, meth="pmm", seed=500, printFlag=FALSE)
+imp_iris <- mice(iris.mis, m=5, maxit=20, meth="pmm", seed=500, printFlag=FALSE)
 summary(imp_iris)
 ```
 
@@ -589,6 +591,9 @@ summary(imp_iris)
     - If specified as a single string, the same method will be used for all columns. 
     - Columns that need not be imputed have the empty method ''
 * `printFlag`: Use print=FALSE for silent computation.
+
+**Read 4.3: Assessing Convergence in the [JSS article on mice](https://www.jstatsoft.org/article/view/v045i03)**
+
 
 #### Check the imputation method used on each variable.
 ```{r}
@@ -605,7 +610,7 @@ imp_iris$imp$Sepal.Length
 ```{r}
 iris_1 <- complete(imp_iris, action=1)
 ```
-If action is a scalar between 1 and x$m, the function returns the data with imputation number action filled in. Thus, action=1 returns the first completed data set, action=2 returns the second completed data set, and so on
+Action=1 returns the first completed data set, action=2 returns the second completed data set, and so on. 
 
 ##### Alternative - Stack the imputed data sets in _long_ format.
 ```{r}
@@ -625,20 +630,77 @@ Let's compare the imputed values to the observed values to see if they are indee
 We want to see that the distribution of of the magenta points (imputed) matches the distribution of the blue ones (observed). 
 
 #### Univariately
-```{r}
+```{r, fig.width=8}
 densityplot(imp_iris)
-```
-or
-```{r}
-stripplot(imp_iris, pch=16)
 ```
 
 #### Multivariately 
-```{r, fig.width=6, fig.height=6}
-xyplot(imp_iris, Sepal.Length ~ Sepal.Width + Petal.Length + Petal.Width | Species ,pch=16)
+```{r, fig.width=8, fig.height=8}
+xyplot(imp_iris, Sepal.Length ~ Sepal.Width + Petal.Length + Petal.Width | Species, cex=.8, pch=16)
 ```
 
-## Conduct an analysis and pool results. 
+## Analyze and pool
+Conduct an analysis and pool results. 
+
+Let's run a simple linear regression on `Sepal.Length` as a function of `Sepal.Width`, 
+`Petal.Length` and `Species`.
+
+```{r}
+model <- with(imp_iris, lm(Sepal.Length ~ Sepal.Width + Petal.Length + Species))
+summary(pool(model))
+```
+
+Pooled parameter estimates $\bar{Q}$ and their standard errors $\sqrt{T}$ are
+provided, along with a significance test (against $\beta_p=0$), and a 95% interval. 
+
+Additional information included in this table is the number of missing values, 
+the _fraction of missing information_ (`fmi`) as defined by Rubin (1987), 
+and `lambda`, the proportion of total variance that is attributable to the 
+missing data ($\lambda = (B + B/m)/T)$. 
+
+
+You can easily create a simpler table using xtable and selecting specific
+columns to display. 
+
+```{r, results='asis'}
+print(xtable(summary(pool(model))[,c(1:3, 5:7, 9)], digits=3), type="html")
+```
+
+#### Calculating bias
+The iris data set had no missing data to begin with. So we can calculate the
+"true" parameter estimates...
+```{r}
+true.model <- lm(Sepal.Length ~ Sepal.Width + Petal.Length + Species, data=iris)
+```
+and find the differnce in coefficients. 
+
+The variance of the multiply imputed estimates is larger because of the
+between-imputation variance. 
+
+```{r, echo=FALSE}
+library(forestplot)
+te.mean <- summary(true.model)$coefficients[,1]
+mi.mean <- summary(pool(model))[,1]
+te.ll   <- te.mean - 1.96*summary(true.model)$coefficients[,2]
+mi.ll   <- summary(pool(model))[,6]
+te.ul   <- te.mean + 1.96*summary(true.model)$coefficients[,2]
+mi.ul   <- summary(pool(model))[,7]
+names <-names(coef(true.model))
+
+forestplot(names, 
+           legend = c("True Model", "MICE"),
+           fn.ci_norm = c(fpDrawNormalCI, fpDrawCircleCI), 
+           boxsize = .1, 
+           line.margin = .05, 
+           mean = cbind(te.mean, mi.mean), 
+           lower = cbind(te.ll, mi.ll),
+           upper = cbind(te.ul, mi.ul), 
+           col=fpColors(box=c("blue", "darkred")), 
+           xlab="Regression coefficients", 
+           ci.verticies=TRUE
+           )
+```
+
 
 
 # Final thoughts
